--- a/app/src/main/res/layout/item_notification_receive.xml
+++ b/app/src/main/res/layout/item_notification_receive.xml
@@ -1,66 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cl_noti_receive_bg"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:layout_marginBottom="29dp"
-    android:background="@drawable/rectangle_white_10"
-    android:elevation="5dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <TextView
-        android:id="@+id/tv_receive"
-        android:layout_width="wrap_content"
+        <variable
+            name="ingData"
+            type="org.seemeet.seemeet.data.local.NotificationIngData" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_noti_receive_bg"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="@string/noti_receive"
-        android:textSize="18sp"
-        android:fontFamily="@font/spoqa_han_sans_neo_bold"
-        android:textColor="@color/gray06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_receive_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/noti_day"
-        android:textColor="@color/gray04"
-        android:textSize="13sp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        app:layout_constraintBottom_toBottomOf="@id/tv_receive"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_receive" />
-
-    <TextView
-        android:id="@+id/tv_receive_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:text="@string/noti_receive_msg"
-        android:textColor="@color/gray06"
-        android:textSize="16sp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        app:layout_constraintTop_toBottomOf="@id/rv_receive_friend_list"
-        app:layout_constraintStart_toStartOf="@id/tv_receive"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_receive_friend_list"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_receive"
-        tools:listitem="@layout/item_notification_receive_friend_list"
-        tools:itemCount="3"/>
+        android:layout_marginBottom="29dp"
+        android:background="@drawable/rectangle_white_10"
+        android:elevation="5dp"
+        android:padding="20dp">
 
 
+        <TextView
+            android:id="@+id/tv_receive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            android:text="@{ingData.requestTitle}"
+            android:textColor="@color/gray06"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_receive_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="@{ingData.day}"
+            android:textColor="@color/gray04"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_receive"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_receive" />
+
+        <TextView
+            android:id="@+id/tv_receive_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="@{ingData.msg}"
+            android:textColor="@color/gray06"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/tv_receive"
+            app:layout_constraintTop_toBottomOf="@id/rv_receive_friend_list" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_receive_friend_list"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_receive"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_notification_receive_friend_list" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
