--- a/app/src/main/res/layout/item_notification_send.xml
+++ b/app/src/main/res/layout/item_notification_send.xml
@@ -1,89 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cl_noti_send_bg"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:layout_marginBottom="20dp"
-    android:background="@drawable/rectangle_white_10"
-    android:elevation="5dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <TextView
-        android:id="@+id/tv_send"
-        android:layout_width="wrap_content"
+        <variable
+            name="ingData"
+            type="org.seemeet.seemeet.data.local.NotificationIngData" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_noti_send_bg"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="@string/noti_send"
-        android:textSize="18sp"
-        android:fontFamily="@font/spoqa_han_sans_neo_bold"
-        android:textColor="@color/pink"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rectangle_white_10"
+        android:elevation="5dp"
+        android:padding="20dp">
 
-    <TextView
-        android:id="@+id/tv_send_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/noti_day"
-        android:textColor="@color/gray04"
-        android:textSize="13sp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        app:layout_constraintBottom_toBottomOf="@id/tv_send"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_send" />
 
-    <TextView
-        android:id="@+id/tv_send_msg_wait"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="@string/noti_send_msg_wait"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:textColor="@color/gray06"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_send"
-        app:layout_constraintStart_toStartOf="@id/tv_send"
-        />
+        <TextView
+            android:id="@+id/tv_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            android:text="@{ingData.requestTitle}"
+            android:textColor="@color/pink"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_send_msg_wait_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_bold"
-        android:text="@string/noti_send_msg_wait_num"
-        android:textColor="@color/pink"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_send_msg_wait"
-        app:layout_constraintStart_toEndOf="@id/tv_send_msg_wait"
-        app:layout_constraintTop_toTopOf="@+id/tv_send_msg_wait" />
+        <TextView
+            android:id="@+id/tv_send_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="@{ingData.day}"
+            android:textColor="@color/gray04"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_send"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_send" />
 
-    <TextView
-        android:id="@+id/tv_send_msg_wait2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:text="@string/noti_send_msg_wait2"
-        android:textColor="@color/gray06"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_send_msg_wait_num"
-        app:layout_constraintStart_toEndOf="@id/tv_send_msg_wait_num"
-        app:layout_constraintTop_toTopOf="@+id/tv_send_msg_wait_num" />
+        <TextView
+            android:id="@+id/tv_send_msg_wait"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="@{ingData.msg}"
+            android:textColor="@color/gray06"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/tv_send"
+            app:layout_constraintTop_toBottomOf="@id/tv_send" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_send_friend_list"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_send_msg_wait"
-        tools:listitem="@layout/item_notification_send_friend_list"
-        tools:itemCount="3"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_send_friend_list"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_send_msg_wait"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_notification_send_friend_list" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
