--- a/app/src/main/res/layout/fragment_noti_in_progress.xml
+++ b/app/src/main/res/layout/fragment_noti_in_progress.xml
@@ -81,8 +81,9 @@
                 android:id="@+id/rv_ing_list"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="11dp"
                 android:orientation="vertical"
+                android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
