--- a/app/src/main/res/layout/item_notification_done.xml
+++ b/app/src/main/res/layout/item_notification_done.xml
@@ -73,26 +73,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_close_48" />
 
-        <!--
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_send_friend_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_done_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_done_title"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_notification_done_friend_list" />
-            -->
-
         <com.google.android.material.chip.ChipGroup
-            android:id="@+id/cg_send_friend_list"
+            android:id="@+id/cg_done_friend_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
