--- a/app/src/main/res/layout/item_notification_receive.xml
+++ b/app/src/main/res/layout/item_notification_receive.xml
@@ -16,7 +16,9 @@
         android:id="@+id/cl_noti_receive_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="29dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rectangle_white_10"
         android:elevation="5dp"
         android:padding="20dp">
@@ -56,20 +58,16 @@
             android:textColor="@color/gray06"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@id/tv_receive"
-            app:layout_constraintTop_toBottomOf="@id/rv_receive_friend_list" />
+            app:layout_constraintTop_toBottomOf="@id/cg_receive_friend_list" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_receive_friend_list"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/cg_receive_friend_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_receive"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_notification_receive_friend_list" />
-
+            app:layout_constraintTop_toBottomOf="@id/tv_receive" >
+            </com.google.android.material.chip.ChipGroup>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
