[FEAT] 받은 신청 기본 기능

--- a/app/src/main/res/layout/item_receive_checkbox.xml
+++ b/app/src/main/res/layout/item_receive_checkbox.xml
@@ -6,6 +6,9 @@
         <variable
             name="checkboxData"
             type="org.seemeet.seemeet.data.local.CheckboxData"/>
+        <variable
+            name="viewModel"
+            type="org.seemeet.seemeet.ui.viewmodel.ReceiveViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
