--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foreground="@drawable/ic_btn_send_message"
     tools:context=".ui.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
@@ -21,30 +22,32 @@
             android:id="@+id/bnv_main"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="@color/white"
             android:layout_gravity="bottom"
+            android:background="@color/white"
             app:elevation="0dp"
             app:itemIconSize="48dp"
-            app:labelVisibilityMode="unlabeled"
             app:itemIconTint="@drawable/selector_menu_color"
+            app:labelVisibilityMode="unlabeled"
             app:menu="@menu/main_bottom_navigation_menu">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_main"
-            android:elevation="0dp"
-            app:elevation="0dp"
-            app:srcCompat="@drawable/ic_btn_send_message"
-            app:maxImageSize="55dp"
-            app:fabCustomSize="63dp"
-            android:layout_marginBottom="16dp"
-            app:layout_anchor="@id/bnv_main"
-            android:backgroundTint="@color/black"
-            app:layout_anchorGravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/bnv_main" />
+            android:layout_above="@id/bnv_main"
+            android:layout_marginBottom="16dp"
+            android:elevation="0dp"
+            app:elevation="0dp"
+            app:fabCustomSize="63dp"
+            app:layout_anchor="@id/bnv_main"
+            app:layout_anchorGravity="center_horizontal"
+            app:maxImageSize="55dp"
+            app:backgroundTint="@color/black"
+            app:tint="@color/white"
+            android:src="@drawable/ic_btn_send_message" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
