--- a/app/src/main/res/layout/item_notification_done.xml
+++ b/app/src/main/res/layout/item_notification_done.xml
@@ -45,7 +45,7 @@
             app:layout_constraintTop_toTopOf="@id/tv_done_day" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/tv_done_title"
@@ -66,7 +66,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_done_day" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/iv_delete_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +87,7 @@
 
         </com.google.android.material.chip.ChipGroup>
 
+        <!--
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
@@ -94,7 +95,7 @@
             android:background="@color/gray02"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
+            -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
