--- a/app/src/main/res/layout/calendar_day.xml
+++ b/app/src/main/res/layout/calendar_day.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal"
+    android:paddingLeft="17dp"
+    android:paddingRight="17dp"
     tools:ignore="HardcodedText">
 
     <TextView
@@ -12,69 +14,76 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="일"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/tv_mon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="월"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/tv_tue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="화"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/tv_wed"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="수"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/tv_thu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="목"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/tv_fri"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="금"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/tv_sat"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:gravity="center"
         android:text="토"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
 </LinearLayout>
