--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -15,30 +15,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:paddingTop="22dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingLeft="15dp"
+                android:paddingTop="2dp">
 
                 <TextView
                     android:id="@+id/tv_current_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/din_pro_bold"
                     android:textColor="@color/pink"
-                    android:textSize="24sp"
+                    android:textSize="22sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="2019" />
+                    tools:text="2019년" />
 
                 <TextView
                     android:id="@+id/tv_current_month"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/din_pro_bold"
                     android:textColor="@color/pink"
-                    android:textSize="24sp"
+                    android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@+id/tv_current_year"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="1월" />
@@ -58,7 +62,9 @@
             android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cv_dayViewResource="@layout/calendar_date_item"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="17dp"
+            app:cv_dayViewResource="@layout/item_calendar_date"
             app:cv_inDateStyle="allMonths"
             app:cv_orientation="horizontal"
             app:cv_outDateStyle="endOfRow"
@@ -71,6 +77,8 @@
             android:id="@+id/event_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="#EEEEEE"
+            android:paddingTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/calendar">
 
@@ -78,14 +86,11 @@
                 android:id="@+id/tv_selected_day"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="#EEEEEE"
-                android:paddingStart="20dp"
-                android:paddingTop="12dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="12dp"
+                android:layout_marginLeft="16dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:textAllCaps="true"
-                android:textSize="14sp"
+                android:textColor="@color/gray06"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="1월 14일 목요일" />
 
@@ -94,10 +99,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
+                android:layout_marginTop="16dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_selected_day"
                 app:spanCount="1" />
+
+            <TextView
+                android:id="@+id/tv_empty_promise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="일정이없어요!"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_selected_day">
+            </TextView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
