--- a/app/src/main/res/layout/item_calendar_date.xml
+++ b/app/src/main/res/layout/item_calendar_date.xml
@@ -14,16 +14,19 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:gravity="center"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="16sp"
+        android:fontFamily="@font/din_pro_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="22" />
+        tools:text="22"/>
 
     <View
         android:id="@+id/view_dot"
         android:layout_width="5dp"
         android:layout_height="5dp"
-        android:background="@color/pink"
+        android:background="@drawable/oval_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_date" />
