--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -250,37 +250,57 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cl_recieve_middle">
 
+
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/cl_receive_click_day"
-                        android:background="@color/gray01"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent">
+                        android:background="@color/gray01"
+                        android:minHeight="261dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:layout_editor_absoluteX="-71dp">
 
                         <TextView
                             android:id="@+id/tv_receive_click_day"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
                             android:text="21.12.03"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/tv_receive_s_msg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginEnd="0dp"
+                            android:layout_marginBottom="0dp"
+                            android:text="날짜를 선택해보세요!"
+                            android:visibility="visible"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rv_receive_schdule"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:layout_constraintTop_toBottomOf="@id/tv_receive_click_day"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
+                            android:clipToPadding="false"
+                            android:orientation="horizontal"
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginBottom="20dp"/>
+                            app:layout_constraintTop_toBottomOf="@id/tv_receive_click_day"
+                            tools:listitem="@layout/item_receive_schedule" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/cl_receive_buttons"
@@ -288,25 +308,44 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/cl_receive_click_day">
 
-                        <Button
+                        <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_receive_no"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="14sp"
+                            android:background="@drawable/rectangle_gray04_10"
+                            android:paddingStart="60dp"
+                            android:paddingEnd="60dp"
+                            android:paddingTop="13dp"
+                            android:paddingBottom="13dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginBottom="15dp"
+                            android:textColor="@color/white"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginEnd="0dp"
                             android:text="거절"
                             app:layout_constraintEnd_toStartOf="@id/btn_receive_yes"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"/>
 
-                        <Button
+                        <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_receive_yes"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
+                            android:background="@drawable/rectangle_gray02_10"
                             android:text="수락"
-                            app:layout_constraintStart_toEndOf="@id/btn_receive_no"
+                            android:paddingStart="60dp"
+                            android:paddingEnd="60dp"
+                            android:paddingTop="13dp"
+                            android:paddingBottom="13dp"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="@id/btn_receive_no"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintHorizontal_chainStyle="spread"
+                            app:layout_constraintStart_toEndOf="@id/btn_receive_no"
+                            app:layout_constraintTop_toTopOf="@id/btn_receive_no" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
