--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -90,8 +90,8 @@
                     <TextView
                         android:id="@+id/tv_home_msg"
                         android:textColor="@color/gray06"
-                        android:lineSpacingExtra="5sp"
-                        android:letterSpacing="-0.13"
+                        android:lineSpacingExtra="2sp"
+                        android:letterSpacing="-0.06"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="21dp"
@@ -107,11 +107,12 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@color/gray04"
+                    android:layout_height="0dp"
+                    android:background="@color/gray02"
+                    app:layout_constraintDimensionRatio="32:20"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="7dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="13dp"
                     android:layout_marginStart="21dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -145,27 +146,29 @@
                         android:textColor="@color/black"
                         android:textSize="20sp"
                         android:lineSpacingExtra="32sp"
+                        app:layout_constraintBottom_toTopOf="@id/rv_home_reminder"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginStart="20dp"
-                        android:layout_marginTop="26dp"/>
+                        android:layout_marginTop="16dp"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_home_reminder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="25dp"
+                        app:layout_constraintTop_toBottomOf="@id/tv_home_reminder"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/item_home_reminder"
+                        android:overScrollMode="never"
+                        android:paddingHorizontal="20dp"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_home_reminder"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="25dp"
-                    app:layout_constraintTop_toBottomOf="@id/cl_home_reminder"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/item_home_reminder"
-                    android:overScrollMode="never"
-                    android:paddingHorizontal="20dp"
-                    android:clipToPadding="false"
-                    android:orientation="horizontal"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
