--- a/app/src/main/res/layout/item_receive_schedule.xml
+++ b/app/src/main/res/layout/item_receive_schedule.xml
@@ -10,14 +10,27 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_receive_schedule"
-        android:layout_width="236dp"
-        android:layout_height="141dp"
-        android:background="@drawable/bg_receive_card_white">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="224dp">
+
+        <ImageView
+            android:id="@+id/iv_receive_schedule_bg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/bg_receive_card_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
         <ImageView
             android:id="@+id/iv_receive_schedule_bar"
             android:layout_width="12dp"
-            android:layout_height="141dp"
+            android:layout_height="0dp"
+            android:minHeight="141dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -35,15 +48,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="27dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="15dp" />
 
         <ImageView
             android:id="@+id/iv_receive_schedule_line"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="1dp"
             android:src="@drawable/line_dddddd"
             app:layout_constraintTop_toBottomOf="@id/tv_receive_s_title"
             app:layout_constraintStart_toEndOf="@id/iv_receive_schedule_bar"
+            app:layout_constraintEnd_toEndOf="@id/iv_receive_schedule_bg"
             android:layout_marginTop="13dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
@@ -54,25 +68,29 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="오전 10 : 00 ~ 오후 13 : 00"
-            android:layout_marginStart="16dp"
-            android:textSize="14sp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="77dp"
             android:textColor="@color/gray06"
-            android:textAlignment="center"
-            android:letterSpacing="-0.08"
-            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            android:fontFamily="@font/din_pro_regular"
+            android:textStyle="normal"
+            android:textSize="13sp"
+            android:letterSpacing="-0.01"
+            app:layout_constraintEnd_toEndOf="@id/iv_receive_schedule_bg"
             app:layout_constraintStart_toEndOf="@id/iv_receive_schedule_bar"
             app:layout_constraintTop_toBottomOf="@id/iv_receive_schedule_line"/>
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_recieve_together"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:minHeight="25dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintTop_toBottomOf="@id/tv_receive_schedule_time"
             app:layout_constraintStart_toEndOf="@id/iv_receive_schedule_bar"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/iv_receive_schedule_bg"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
