--- a/app/src/main/res/drawable/rectangle_white_top10.xml
+++ b/app/src/main/res/drawable/rectangle_white_top10.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#F6F6F6"/>
-    <corners android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
+    <solid android:color="#fff"/>
+    <corners android:radius="10dp"/>
 </shape>
