--- a/app/src/main/res/layout/item_receive_schedule.xml
+++ b/app/src/main/res/layout/item_receive_schedule.xml
@@ -39,7 +39,8 @@
             android:id="@+id/tv_receive_s_title"
            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="대방어데이"
+            android:text="@{scheduleData.title}"
+            tools:text="대방어데이"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:textSize="16sp"
             android:textColor="#1c1c1c"
@@ -67,7 +68,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="오전 10 : 00 ~ 오후 13 : 00"
+            android:text="@{scheduleData.time}"
+            tools:text="오전 10 : 00 ~ 오후 13 : 00"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="77dp"
             android:textColor="@color/gray06"
@@ -88,6 +90,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginBottom="15dp"
             android:layout_marginEnd="10dp"
+            app:singleLine="true"
             app:layout_constraintTop_toBottomOf="@id/tv_receive_schedule_time"
             app:layout_constraintStart_toEndOf="@id/iv_receive_schedule_bar"
             app:layout_constraintEnd_toEndOf="@id/iv_receive_schedule_bg"
