--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.friend.AddFriendActivity">
 
@@ -67,11 +67,31 @@
             android:id="@+id/iv_search_friend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:src="@drawable/ic_search"
             app:layout_constraintBottom_toBottomOf="@+id/et_search_friend_id"
             app:layout_constraintStart_toStartOf="@+id/et_search_friend_id"
             app:layout_constraintTop_toTopOf="@+id/et_search_friend_id" />
+
+        <ImageView
+            android:id="@+id/iv_friend_id_remove_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_btn_remove"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/et_search_friend_id"
+            app:layout_constraintEnd_toEndOf="@+id/et_search_friend_id"
+            app:layout_constraintTop_toTopOf="@+id/et_search_friend_id" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="35dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_search_friend_id" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
